--- a/themes/carpal-tunnel/assets/scss/_partials/_home-team.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_home-team.scss
@@ -30,8 +30,17 @@
   }
   &__img{
     overflow: hidden;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
     img{
       transition: 700ms;
+      height: 100%;
+      position: absolute;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+      font-family: 'object-fit: cover; object-position: center;';
     }
   }
   figcaption{
