--- a/themes/carpal-tunnel/assets/scss/_partials/_slideshow.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_slideshow.scss
@@ -27,6 +27,9 @@
           padding-right: ($grid-gutter-width / 6) + px;
         }
       }
+      @include respond-to(sm){
+        display: block;
+      }
     }
   }
   &__image {
