--- a/themes/carpal-tunnel/layouts/partials/slideshow.html
+++ b/themes/carpal-tunnel/layouts/partials/slideshow.html
@@ -3,26 +3,28 @@
     <div class="slideshow__wrap" data-speed="{{.Site.Data.slideshow.speed}}">
       {{ range .Site.Data.slideshow.item }}
       <div>
-        <div class="row">
-          <div class="col-12 col-sm-7 col-md-4 col-lg-6">
-            <img class="img-responsive slideshow__image" src="{{.image}}" alt="{{.heading}}">
-          </div>
-          <div class="col-12 col-md-8 col-lg-6 d-flex">
-            <div class="slideshow__inner">
-              <h2>{{$.Site.Data.slideshow.heading}}</h2>
-              <div class="slideshow__text">
-                <div class="slideshow__nav"></div>
-                <h3>{{.heading}}</h3>
-                <div>
-                  {{ if in (string .text) "\n\n" }}
-                  {{ .text | markdownify }}
-                  {{ else }}
-                    <p>{{ .text | markdownify}}</p>
+        <div class="slideshow__item">
+          <div class="row">
+            <div class="col-12 col-sm-7 col-md-4 col-lg-6">
+              <img class="img-responsive slideshow__image" src="{{.image}}" alt="{{.heading}}">
+            </div>
+            <div class="col-12 col-md-8 col-lg-6 d-flex">
+              <div class="slideshow__inner">
+                <h2>{{$.Site.Data.slideshow.heading}}</h2>
+                <div class="slideshow__text">
+                  <div class="slideshow__nav"></div>
+                  <h3>{{.heading}}</h3>
+                  <div>
+                    {{ if in (string .text) "\n\n" }}
+                    {{ .text | markdownify }}
+                    {{ else }}
+                      <p>{{ .text | markdownify}}</p>
+                    {{ end }}
+                  </div>
+                  {{ with .button_link }}
+                    <a class="btn btn--default" href="{{.}}">Read more</a>
                   {{ end }}
                 </div>
-                {{ with .button_link }}
-                  <a class="btn btn--default" href="{{.}}">Read more</a>
-                {{ end }}
               </div>
             </div>
           </div>
