--- a/themes/carpal-tunnel/layouts/partials/footer.html
+++ b/themes/carpal-tunnel/layouts/partials/footer.html
@@ -14,7 +14,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.js" integrity="sha256-yE0r0xKguW5+Mx31/ApDi0I3aYuUMfSwUD5208Ajz9k=" crossorigin="anonymous"></script>
 {{ "<!-- Main Script -->" | safeHTML }}
 {{ $script := resources.Get "js/scripts.js"}}
-{{ $script_dest := slice $script | resources.Concat "assets/js/scripts.js"}}
+{{ $script_dest := slice $script | resources.Concat "assets/js/scripts.js" | minify}}
 <script src="{{ $script_dest.RelPermalink }}"></script>
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
