--- a/themes/carpal-tunnel/layouts/partials/footer.html
+++ b/themes/carpal-tunnel/layouts/partials/footer.html
@@ -17,6 +17,16 @@
 {{ $script_dest := slice $script | resources.Concat "assets/js/scripts.js" | minify}}
 <script src="{{ $script_dest.RelPermalink }}"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{.Site.Params.googleAnalitycsID}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{.Site.Params.googleAnalitycsID}}');
+</script>
+
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 <script>
