Updates from Clinic to Center

--- a/themes/carpal-tunnel/layouts/partials/header.html
+++ b/themes/carpal-tunnel/layouts/partials/header.html
@@ -23,7 +23,7 @@
   </nav>
   <a href="tel:{{ replaceRE "[-]" "" .Site.Data.contact.cleveland.cleveland_phone}}" class="site-header__call">
     <div class="site-header__call-icon"><i class="icon icon-mobile"></i></div>
-    <div class="d-none d-block-lg">Call to our clinic: <span>{{.Site.Data.contact.cleveland.cleveland_phone}}</span></div>
+    <div class="d-none d-block-lg">Call to our center: <span>{{.Site.Data.contact.cleveland.cleveland_phone}}</span></div>
   </a>
   <a class="btn btn--light" href="#contact">Contact Us</a>
 </header>
